// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects renders correctly with a single item 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c11 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c6 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: #ffffff;
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c13 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c13:hover {
  color: #3b82f6;
}

.c13:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c12 {
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c7 {
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
  border: 1px solid #a0a0b0;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c7:hover {
  border-color: #3b82f6;
}

.c8 {
  margin: 0 0 0.75rem;
}

.c10 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c14:hover {
  text-decoration: underline;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c6 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Projects
      </p>
      <h2
        class="c4 c5"
      >
        What I've built
      </h2>
      <div
        class="c6 "
      >
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Petite Revery
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project: Petite Revery"
            class="c13 c14"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            7mesh Industries
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Algolia
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh Industries"
            class="c13 c14"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
      </div>
    </section>
  </section>
</div>
`;

exports[`Projects renders correctly with full project list 1`] = `
.c0 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c11 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.c6 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 1.5rem;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: #ffffff;
  margin: 0;
  font-size: 2.5rem;
  line-height: 1.1;
}

.c13 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c13:hover {
  color: #3b82f6;
}

.c13:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c2 {
  color: #a0a0b0;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c12 {
  border: 1px solid #a0a0b0;
  color: #a0a0b0;
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: #3b82f6;
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c7 {
  display: flex;
  flex-direction: column;
  padding: 3rem 2rem;
  border: 1px solid #a0a0b0;
  border-radius: 10px;
  transition: border-color 0.2s ease;
}

.c7:hover {
  border-color: #3b82f6;
}

.c8 {
  margin: 0 0 0.75rem;
}

.c10 {
  margin-bottom: 1.5rem;
  flex: 1;
}

.c14 {
  font-size: 0.875rem;
  font-weight: 700;
  align-self: flex-start;
}

.c14:hover {
  text-decoration: underline;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 600px) {
  .c6 {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media (min-width: 900px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1200px) {
  .c6 {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1536px) {
  .c6 {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

<div>
  <section
    class="c0"
    id="projects"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
        variant="regular"
      >
        Projects
      </p>
      <h2
        class="c4 c5"
      >
        What I've built
      </h2>
      <div
        class="c6 "
      >
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Petite Revery
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            High-end fashion ecommerce built on Next.js and Shopify Storefront API. Custom product configurator, size guides, and a fully bespoke checkout experience.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              styled-components
            </span>
          </div>
          <a
            aria-label="View project: Petite Revery"
            class="c13 c14"
            href="https://petiterevery.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            7mesh Industries
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            Performance cycling apparel brand. Headless Shopify storefront with custom collection filtering, Algolia search, and Storybook component library.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify
            </span>
            <span
              class="c12"
            >
              Algolia
            </span>
            <span
              class="c12"
            >
              Storybook
            </span>
          </div>
          <a
            aria-label="View project: 7mesh Industries"
            class="c13 c14"
            href="https://7mesh.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Nest Designs
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            Baby and kids lifestyle brand. Shopify Plus storefront with subscription products, loyalty integration, and multi-currency support.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              Next.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Shopify Plus
            </span>
            <span
              class="c12"
            >
              Klaviyo
            </span>
          </div>
          <a
            aria-label="View project: Nest Designs"
            class="c13 c14"
            href="https://nestdesigns.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            View project →
          </a>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Videoland
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            Dutch video streaming platform. Led frontend architecture for the React rewrite from a legacy codebase, delivering live sports, series, and films.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
            <span
              class="c12"
            >
              Redux
            </span>
            <span
              class="c12"
            >
              Jest
            </span>
          </div>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Arfer
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            B2B furniture configurator for architects and interior designers. Real-time 3D preview with a custom quote engine built on React and Three.js.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              Three.js
            </span>
            <span
              class="c12"
            >
              TypeScript
            </span>
          </div>
        </article>
        <article
          class="c7"
        >
          <h3
            class="c8"
          >
            Sprintt Ceramica
          </h3>
          <p
            class="c9 c10"
            variant="small"
          >
            Ecommerce and product catalogue for an Italian ceramic tile manufacturer. Custom CMS integration and multi-language support.
          </p>
          <div
            class="c11"
          >
            <span
              class="c12"
            >
              React
            </span>
            <span
              class="c12"
            >
              Contentful
            </span>
            <span
              class="c12"
            >
              i18n
            </span>
          </div>
        </article>
      </div>
    </section>
  </section>
</div>
`;
